--- a/assets/pages/html/home.html
+++ b/assets/pages/html/home.html
@@ -27,8 +27,11 @@
         <h2 id="myBooking">My Booking</h2>
 
         <!-- profile icon -->
-        <i class="fas fa-user" id="profile"></i>
+        <!-- <i class="fas fa-user" id="profile"></i> -->
         <!-- <h1 id="userName"></h1> -->
+        <i class="fas fa-user" id="profile"></i>
+
+
     </header>
     <main>
 
@@ -94,10 +97,11 @@
         </div>
     </main>
 </body>
-    <!-- <script>
+<!-- <script>
         const h1 = document.getElementById("userName");
         localStorage.getItem("userName");
         h1.textContent = username;
     </script> -->
-    <script src="../scripts/home.js"></script>
+<script src="../scripts/home.js"></script>
+
 </html>
