Add login and sign up

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <img src="./assets/image/SMART BUS logo.png" alt="Bus_logo" id="Bus_Logo">
             <h1 id="loginHeading">LOGIN</h1>
 
-            <!-- Name input -->
+            <!-- Name input
             <input type="text" id="Name_inputs" name="name" placeholder="User Name">
 
-            <!-- Name input logo -->
+            Name input logo
             <img src="./assets/image/userName_logo.png" alt="username_logo" id="userName_Logo">
-            <span id="nameError"></span>
+            <span id="nameError"></span> -->
 
             <!-- Email input -->
             <input type="email" id="Email_inputs" name="email" placeholder="Email">
@@ -56,7 +56,7 @@
             <p id="go_sign_up">don't have an account?<a href="#">Sign up</a></p>
         </form>
     </div>
-
+<img src="" alt="">
     <!-- Sign up page -->
     <div class="sign_up_container hidden">
         <form action="" id="sign_up_form" novalidate>
@@ -80,8 +80,7 @@
             <span id="signUpEmailError"></span>
 
             <!-- Mobile number input -->
-            <input type="number" id="Number_input" name="number" placeholder="Mobile Number">
-
+            <input type="tel" id="Number_input" name="number" placeholder="Mobile Number">
             <!-- Mobile number input logo -->
             <img src="./assets/image/phone_logo.png" alt="phone_logo" id="phone_logo">
             <span id="numberError"></span>
