Add logout button

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
             <img src="./assets/image/SMART BUS logo.png" alt="Bus_logo" id="Bus_Logo">
             <h1 id="loginHeading">LOGIN</h1>
 
-            <!-- Name input
+            <!-- Name input -->
             <input type="text" id="Name_inputs" name="name" placeholder="User Name">
 
-            Name input logo
+            <!-- Name input logo -->
             <img src="./assets/image/userName_logo.png" alt="username_logo" id="userName_Logo">
-            <span id="nameError"></span> -->
+            <span id="nameError"></span>
 
             <!-- Email input -->
             <input type="email" id="Email_inputs" name="email" placeholder="Email">
@@ -125,9 +125,9 @@
 
         </form>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-    <script src="./assets/pages/scripts/login.js"></script>
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script> -->
+    <script type="module" src="./assets/pages/scripts/login.js"></script>
 </body>
 
 </html>
