--- a/assets/pages/html/home.html
+++ b/assets/pages/html/home.html
@@ -15,6 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Anton&family=Anton+SC&family=Archivo:ital,wght@0,100..900;1,100..900&family=Dangrek&family=Foldit:wght@100..900&family=Kalnia+Glaze:wght@100..700&family=Kaushan+Script&family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Oswald:wght@200..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Shrikhand&family=Signika+Negative:wght@300..700&family=Yeseva+One&display=swap"
         rel="stylesheet">
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 </head>
 
 <body>
@@ -26,8 +27,6 @@
         <h2 id="myBooking">My Booking</h2>
 
         <!-- profile icon -->
-        <!-- <i class="fas fa-user" id="profile"></i> -->
-        <!-- <h1 id="userName"></h1> -->
         <i class="fas fa-user" id="profile"></i>
 
 
@@ -88,18 +87,14 @@
                 <div class="date_input">
                     <label for="date">Date</label>
                     <input type="date" id="date">
-                </div> 
+                </div>
             </div>
-
             <h1 id="tag_line">Smooth Rides, Lasting Smiles</h1>
         </div>
+        
+       
     </main>
 </body>
-<!-- <script>
-        const h1 = document.getElementById("userName");
-        localStorage.getItem("userName");
-        h1.textContent = username;
-    </script> -->
-<script src="../scripts/home.js"></script>
+<script type="module" src="../scripts/home.js"></script>
 
 </html>
