check login and sign up bugs

--- a/assets/pages/html/busList.html
+++ b/assets/pages/html/busList.html
@@ -22,12 +22,12 @@
          <i class="fas fa-user" id="profile"></i>
     </header>
 
-    <aside>
+    <aside id="side_bar">
 
     </aside>
 
     <main id="bus_container">
-        <!-- <div id="bus_list"></div> -->
+        <div id="bus_list"></div>
     </main>
 
     <script type="module" src="../scripts/busList.js"></script>
