add mobile number new version

--- a/assets/pages/html/busList.html
+++ b/assets/pages/html/busList.html
@@ -12,14 +12,27 @@
 
 <body>
     <header>
-         <!-- Bus logo -->
+         <!-- Bus logo
          <img src="../../image/SMART BUS logo.png" alt="Bus_logo" id="Bus_logo">
 
-         <!-- My booking button -->
+          My booking button 
          <h2 id="myBooking">My Booking</h2>
  
-         <!-- profile icon -->
-         <i class="fas fa-user" id="profile"></i>
+          profile icon 
+         <i class="fas fa-user" id="profile"></i> -->
+
+         <!-- <form action="">
+            <label for="modifyFrom">From</label>
+            <input type="text" id="modifyFrom" name="modifyFrom">
+
+            <label for="modifyTo">To</label>
+            <input type="text" id="modifyTo" name="modifyTo">
+
+            <label for="date">Date</label>
+            <input type="text" id="date" name="date">
+
+            <div id="modifyButton">Modify</div>
+         </form> -->
     </header>
 
     <aside id="side_bar">
@@ -27,6 +40,7 @@
     </aside>
 
     <main id="bus_container">
+        <div id="busCount"></div>
         <div id="bus_list"></div>
     </main>
 
