rework for profile

--- a/assets/pages/html/home.html
+++ b/assets/pages/html/home.html
@@ -52,7 +52,7 @@
                 <!-- from input -->
                 <div id="from_input">
                     <label for="from">From</label>
-                    <input type="text" id="from">
+                    <input type="text" id="from" autocomplete="off">
                 </div>
 
                 <!-- 1st line  -->
@@ -73,7 +73,7 @@
                 <!-- to input -->
                 <div id="to_input">
                     <label for="to">To</label>
-                    <input type="text" id="to">
+                    <input type="text" id="to" autocomplete="off">
                 </div>
 
                 <!-- 2nd line -->
