--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
             <h1 id="loginHeading">LOGIN</h1>
 
             <!-- Name input -->
-            <input type="text" id="Name_inputs" name="name" placeholder="User Name">
+            <input type="text" id="Name_inputs" name="name" placeholder="User Name" autocomplete="off">
 
             <!-- Name input logo -->
             <img src="./assets/image/userName_logo.png" alt="username_logo" id="userName_Logo">
             <span id="nameError"></span>
 
             <!-- Email input -->
-            <input type="email" id="Email_inputs" name="email" placeholder="Email">
+            <input type="email" id="Email_inputs" name="email" placeholder="Email" autocomplete="off">
 
             <!-- Email input logo -->
             <img src="./assets/image/email_logo.png" alt="email_logo" id="email_Logo">
             <span id="emailError"></span>
 
             <!-- Password input -->
-            <input type="password" id="password_inputs" name="password" itemid="Password" placeholder="Password">
+            <input type="password" id="password_inputs" name="password" itemid="Password" placeholder="Password"
+                autocomplete="off">
 
             <!-- Password input logo -->
             <img src="./assets/image/password_logo.png" alt="password_logo" id="password_Logo">
@@ -68,14 +69,14 @@
             <h1 id="sign_up_heading">SIGN UP</h1>
 
             <!-- Name input -->
-            <input type="text" id="Name_input" name="name" placeholder="User Name">
+            <input type="text" id="Name_input" name="name" placeholder="User Name" autocomplete="off">
 
             <!-- Name input logo -->
             <img src="./assets/image/userName_logo.png" alt="userName_logo" id="userName_logo">
             <span id="signUpNameError"></span>
 
             <!-- Email input -->
-            <input type="email" id="Email_input" name="email" placeholder="Email">
+            <input type="email" id="Email_input" name="email" placeholder="Email" autocomplete="off">
 
             <!-- Email input logo -->
             <img src="./assets/image/email_logo.png" alt="email_logo" id="email_logo">
@@ -85,21 +86,17 @@
                     <i class=""></i> +91
                 </span>
                 <!-- Mobile number input -->
-                <input type="tel" id="Number_input" name="number" placeholder="Mobile Number">
+                <input type="tel" id="Number_input" name="number" placeholder="Mobile Number" autocomplete="off">
 
-                
+
             </div>
 
-            <!-- <input type="tel" id="Number_input" name="number" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="Mobile Number"> -->
             <!-- Mobile number input logo -->
             <img src="./assets/image/phone_logo.png" alt="phone_logo" id="phone_logo">
             <span id="numberError"></span>
 
-            <!-- <img src="./assets/image/+91_img.png" alt="+91 image" id="codeNumber">
-            <div id="mobileLine"></div> -->
-
             <!-- Password input -->
-            <input type="password" id="password_input" name="password" placeholder="Password">
+            <input type="password" id="password_input" name="password" placeholder="Password" autocomplete="off">
 
             <!-- Password input logo -->
 
@@ -114,7 +111,7 @@
 
             <!-- Confirm Password input -->
 
-            <input type="password" id="Cpassword_input" name="cpassword" placeholder="Confirm Password">
+            <input type="password" id="Cpassword_input" name="cpassword" placeholder="Confirm Password" autocomplete="off">
 
             <!-- Confirm Password input logo -->
             <img src="./assets/image/password_logo.png" alt="ConfirmPassword_logo" id="confirmPassword_logo">
