--- a/assets/pages/html/home.html
+++ b/assets/pages/html/home.html
@@ -7,7 +7,7 @@
     <title>Smart bus</title>
     <link rel="stylesheet" href="../styles/home.css">
 
-    
+    <link rel="icon" href="../../image/icon_logo.png">
 
     
 
