--- a/assets/pages/html/home.html
+++ b/assets/pages/html/home.html
@@ -97,7 +97,7 @@
             <!-- Message container for displaying error -->
             <div id="message-container"></div>
             
-            <h1 id="tag_line">Smooth Rides, Lasting Smiles</h1>
+            <h1 id="tag_line">Smooth rides, Lasting smiles</h1>
         </div>
 
 
