--- a/jsonUpdate.html
+++ b/jsonUpdate.html
@@ -28,7 +28,7 @@ const app = initializeApp(firebaseConfig);
 const database = getDatabase(app);
 async function uploadJSONToFirebase() {
     try {
-        const response = await fetch("../assets/pages/scripts/JSON/buses.json");
+        const response = await fetch("./assets/pages/scripts/JSON/buses.json");
         if (!response.ok) throw new Error("Failed to load local JSON file.");
         const buses = await response.json();
 
