I create a my booking button

--- a/assets/pages/html/seats.html
+++ b/assets/pages/html/seats.html
@@ -44,15 +44,16 @@
 
     <!-- Seats code -->
     <div class="seats">
-      <h3 id="lowerDeckHeading">Lower deck</h3>
+      <h3 id="lowerDeckHeading">Lower Deck</h3>
       <div id="lowerDeckDiv">
-        <i class="fas fa-steering-wheel" style="font-size: 50px;"></i>
-
+          <img src="../../image/steering-wheel.png" alt="steering_image" id="steering">
+          <div id="driverLine"></div>
       </div>
-
-      <h3 id="upperDeckHeading">Upper deck</h3>
+  
+      <h3 id="upperDeckHeading">Upper Deck</h3>
       <div id="upperDeckDiv"></div>
-    </div>
+  </div>
+  
   </main>
 </body>
   <script type="module" src="../scripts/seats.js"></script>
