Demo for mid point review

--- a/assets/pages/html/busList.html
+++ b/assets/pages/html/busList.html
@@ -47,15 +47,11 @@
         <div id="message-container"></div>
     </header>
 
-    <!-- Bus results container -->
-    <div id="busResults"></div>
+    
 
 
 
-
-
-
-
+    <!-- Side bar -->
     <aside id="side_bar">
         <div id="bus_type">
             <h3>BUS TYPES</h3>
@@ -82,7 +78,7 @@
 
 
 
-
+    <!-- Sort by letters -->
     <main id="bus_container">
         <div id="sortBy_bus_result" class="filterHeaders">
             <div id="sortBy">SORT BY :</div>
@@ -96,8 +92,10 @@
 
         </div>
  
-
+        <!-- Bus results container -->
         <div id="bus_list"></div>
+        
+        <!-- Add loading animation -->
         <div id="loader" class="loader"></div>
 
     </main>
