--- a/index.html
+++ b/index.html
@@ -21,21 +21,21 @@
         <form action="" id="login_form" novalidate>
 
             <!-- Bus logo -->
-            <img src="./assets/image/SMART BUS logo.png" alt="Bus_logo" id="Bus_Logo">
+            <img src="./assets/image/SMART BUS logo.png" alt="Bus_logo" id="Bus_Logo" draggable="false">
             <h1 id="loginHeading">LOGIN</h1>
 
             <!-- Name input -->
             <input type="text" id="Name_inputs" name="name" placeholder="User Name" autocomplete="off">
 
             <!-- Name input logo -->
-            <img src="./assets/image/userName_logo.png" alt="username_logo" id="userName_Logo">
+            <img src="./assets/image/userName_logo.png" alt="username_logo" id="userName_Logo" draggable="false">
             <span id="nameError"></span>
 
             <!-- Email input -->
             <input type="email" id="Email_inputs" name="email" placeholder="Email" autocomplete="off">
 
             <!-- Email input logo -->
-            <img src="./assets/image/email_logo.png" alt="email_logo" id="email_Logo">
+            <img src="./assets/image/email_logo.png" alt="email_logo" id="email_Logo" draggable="false">
             <span id="emailError"></span>
 
             <!-- Password input -->
@@ -43,7 +43,7 @@
                 autocomplete="off">
 
             <!-- Password input logo -->
-            <img src="./assets/image/password_logo.png" alt="password_logo" id="password_Logo">
+            <img src="./assets/image/password_logo.png" alt="password_logo" id="password_Logo" draggable="false">
 
             <!-- Password Toggle eye icon -->
             <span id="togglePassword" class="eye-icon">
@@ -62,27 +62,27 @@
             <p id="go_sign_up">don't have an account?<a href="#">Sign up</a></p>
         </form>
     </div>
-    <img src="" alt="">
+   
     <!-- Sign up page -->
     <div class="sign_up_container hidden">
         <form action="" id="sign_up_form" novalidate>
 
             <!-- Bus logo -->
-            <img src="./assets/image/SMART BUS logo.png" alt="Bus_logo" id="Bus_logo">
+            <img src="./assets/image/SMART BUS logo.png" alt="Bus_logo" id="Bus_logo" draggable="false">
             <h1 id="sign_up_heading">SIGN UP</h1>
 
             <!-- Name input -->
             <input type="text" id="Name_input" name="name" placeholder="User Name" autocomplete="off">
 
             <!-- Name input logo -->
-            <img src="./assets/image/userName_logo.png" alt="userName_logo" id="userName_logo">
+            <img src="./assets/image/userName_logo.png" alt="userName_logo" id="userName_logo" draggable="false">
             <span id="signUpNameError"></span>
 
             <!-- Email input -->
             <input type="email" id="Email_input" name="email" placeholder="Email" autocomplete="off">
 
             <!-- Email input logo -->
-            <img src="./assets/image/email_logo.png" alt="email_logo" id="email_logo">
+            <img src="./assets/image/email_logo.png" alt="email_logo" id="email_logo" draggable="false">
             <span id="signUpEmailError"></span>
             <div id="mobile">
                 <span class="input-prefix">
@@ -95,7 +95,7 @@
             </div>
 
             <!-- Mobile number input logo -->
-            <img src="./assets/image/phone_logo.png" alt="phone_logo" id="phone_logo">
+            <img src="./assets/image/phone_logo.png" alt="phone_logo" id="phone_logo" draggable="false">
             <span id="numberError"></span>
 
             <!-- Password input -->
@@ -103,7 +103,7 @@
 
             <!-- Password input logo -->
 
-            <img src="./assets/image/password_logo.png" alt="password_logo" id="password_logo">
+            <img src="./assets/image/password_logo.png" alt="password_logo" id="password_logo" draggable="false">
 
             <!-- Password Toggle eye icon -->
             <span id="signUp-Password-Toggle" class="sign-up-eye-icon">
@@ -117,7 +117,7 @@
             <input type="password" id="Cpassword_input" name="cpassword" placeholder="Confirm Password" autocomplete="off">
 
             <!-- Confirm Password input logo -->
-            <img src="./assets/image/password_logo.png" alt="ConfirmPassword_logo" id="confirmPassword_logo">
+            <img src="./assets/image/password_logo.png" alt="ConfirmPassword_logo" id="confirmPassword_logo" draggable="false">
 
             <!-- Confirm Password Toggle eye icon -->
             <span id="confirm-Password-Toggle" class="confirm_pass_eye-icon">
