Add admin page.

--- a/assets/pages/html/seats.html
+++ b/assets/pages/html/seats.html
@@ -48,7 +48,46 @@
       <div id="lowerDeckDiv">
         <img src="../../image/steering-wheel.png" alt="steering_image" id="steering" draggable="false">
         <div id="driverLine"></div>
-        <div id="seatAlignment">
+       
+      </div>
+
+      <h3 id="upperDeckHeading">Upper Deck</h3>
+      <div id="upperDeckDiv">
+        
+      </div>
+    </div>
+
+    <!-- Message container for displaying error -->
+    <div id="message-container"></div>
+    </main>
+
+
+<!-- Modal for selecting boarding and dropping points -->
+<!-- <div id="pointModal" class="modal">
+  <div class="modal-content">
+    <div class="tab-container">
+      <h3 id="boardingTab" class="tab active">Boarding Point</h3>
+      <h3 id="droppingTab" class="tab">Dropping Point</h3>
+    </div>
+    <div id="boardingLocations" class="locations active">
+      <div class="location" data-location="Point A">Chromepet (19:00)</div>
+      <div class="location" data-location="Point B">Tambaram (19:30)</div>
+      <div class="location" data-location="Point C">Vandalur (19:45)</div>
+      <div class="location" data-location="Point D">Kilambakkam bus stand (20:00)</div>
+      <div class="location" data-location="Point E">chengalpattu (20:30)</div>
+    </div>
+    <div id="droppingLocations" class="locations">
+      <div class="location" data-location="Point G">Thoothukudi (06:20)</div>
+      <div class="location" data-location="Point H">Spic nagar (06:45)</div>
+      <div class="location" data-location="Point I">Muthaiyapuram (07:15)</div>
+    </div>
+  </div>
+  <div id="total-amount">Total Amount: ₹0</div>
+</div> -->
+
+
+
+ <!-- <div id="seatAlignment">
           <div class="seat2">L1</div>
           <div class="seat">L4</div>
           <div class="seat">L7</div>
@@ -69,12 +108,9 @@
           <div class="seat">L12</div>
           <div class="seat">L15</div>
           <div class="seat">L18</div>
-        </div>
-      </div>
+        </div> -->
 
-      <h3 id="upperDeckHeading">Upper Deck</h3>
-      <div id="upperDeckDiv">
-        <div id="seatAlignment">
+        <!-- <div id="seatAlignment">
           <div class="seat">U1</div>
           <div class="seat">U4</div>
           <div class="seat">U7</div>
@@ -95,39 +131,7 @@
           <div class="seat">U12</div>
           <div class="seat">U15</div>
           <div class="seat">U18</div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Message container for displaying error -->
-    <div id="message-container"></div>
-    </main>
-
-
-<!-- Modal for selecting boarding and dropping points -->
-<div id="pointModal" class="modal">
-  <div class="modal-content">
-    <div class="tab-container">
-      <h3 id="boardingTab" class="tab active">Boarding Point</h3>
-      <h3 id="droppingTab" class="tab">Dropping Point</h3>
-    </div>
-    <div id="boardingLocations" class="locations active">
-      <div class="location" data-location="Point A">Chromepet (19:00)</div>
-      <div class="location" data-location="Point B">Tambaram (19:30)</div>
-      <div class="location" data-location="Point C">Vandalur (19:45)</div>
-      <div class="location" data-location="Point D">Kilambakkam bus stand (20:00)</div>
-      <div class="location" data-location="Point E">chengalpattu (20:30)</div>
-    </div>
-    <div id="droppingLocations" class="locations">
-      <div class="location" data-location="Point G">Thoothukudi (06:20)</div>
-      <div class="location" data-location="Point H">Spic nagar (06:45)</div>
-      <div class="location" data-location="Point I">Muthaiyapuram (07:15)</div>
-    </div>
-  </div>
-  <div id="total-amount">Total Amount: ₹0</div>
-</div>
-
-
+        </div> -->
 
 <!-- <div id="passengerForm">
   <h3>Passenger Details</h3>
