Work on seater seats.

--- a/assets/pages/html/admin.html
+++ b/assets/pages/html/admin.html
@@ -74,8 +74,10 @@
             <input type="number" id="fare" autocomplete="off">
             <span id="fareError"></span>
 
-            <label for="seats">Whole seats</label>
-            <input type="number" id="seats" autocomplete="off">
+            <label for="seats">Total seats</label>
+            <select id="seats">
+                <option value="" disabled selected>Select seat count</option>
+            </select>
             <span id="seatsError"></span>
 
             <label for="waterBottle">Water bottle</label>
