Work on boarding point and dropping point.

--- a/assets/pages/html/admin.html
+++ b/assets/pages/html/admin.html
@@ -46,9 +46,17 @@
             <input type="text" id="fromLocation" autocomplete="off">
             <span id="fromLocationError"></span>
 
+            <label for="boardingPoint">Boarding point</label>
+            <input type="text" id="boardingPoint" autocomplete="off" placeholder="Locations (HH:MM)">
+            <span id="boardingPointError"></span>
+
             <label for="toLaction">To location</label>
             <input type="text" id="toLocation" autocomplete="off">
             <span id="toLocationError"></span>
+
+            <label for="droppingPoint">Dropping point</label>
+            <input type="text" id="droppingPoint" autocomplete="off" placeholder="Locations (HH:MM)">
+            <span id="droppingPointError"></span>
 
             <label for="departureTime">Departure time</label>
             <input type="text" id="departureTime" autocomplete="off">
