Work on amount page.

--- a/assets/pages/html/admin.html
+++ b/assets/pages/html/admin.html
@@ -59,7 +59,7 @@
             <span id="droppingPointError"></span>
 
             <label for="departureTime">Departure time</label>
-            <input type="text" id="departureTime" autocomplete="off">
+            <input type="text" id="departureTime" autocomplete="off" placeholder="HH:MM">
             <span id="departureTimeError"></span>
 
             <label for="date">Departure date</label>
@@ -67,7 +67,7 @@
             <span id="departureDateError"></span>
 
             <label for="arrivalTime">Arrival time</label>
-            <input type="text" id="arrivalTime" autocomplete="off">
+            <input type="text" id="arrivalTime" autocomplete="off" placeholder="HH:MM">
             <span id="arrivalTimeError"></span>
 
             <label for="arrivalDate">Arrival date</label>
@@ -75,7 +75,7 @@
             <span id="arrivalDateError"></span>
 
             <label for="duration">Duration time</label>
-            <input type="text" id="duration" autocomplete="off">
+            <input type="text" id="duration" autocomplete="off" placeholder="00h 00m">
             <span id="durationError"></span>
 
             <label for="fare">Fare</label>
@@ -86,6 +86,7 @@
             <select id="seats">
                 <option value="" disabled selected>Select seat count</option>
             </select>
+            <!-- <input type="text" id="seats"> -->
             <span id="seatsError"></span>
 
             <label for="waterBottle">Water bottle</label>
