--- a/assets/pages/html/booking.html
+++ b/assets/pages/html/booking.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smart bus</title>
-    <link rel="icon" href="../../image/icon_logo.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My booking - Smart bus</title>
+  <link rel="stylesheet" href="../styles/booking.css">
+  <link rel="icon" href="../../image/icon_logo.png">
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+
+  <header>
+    <i class="fa-solid fa-left-long" id="leftArrow" title="Go back"></i>
+  </header>
+
+  <h2 class="upcoming">Upcoming Tickets</h2>
+  <div id="upcomingTickets"></div>
+
+  <h2 class="past">Past Tickets</h2>
+  <div id="pastTickets"></div>
+
 </body>
+
+<script src="../scripts/booking.js" type="module"></script>
+
 </html>
