--- a/assets/pages/html/home.html
+++ b/assets/pages/html/home.html
@@ -31,6 +31,9 @@
         <!-- My booking button -->
         <h2 id="myBooking">My Booking</h2>
 
+        <!-- Register your bus -->
+         <button id="registerBus">Register bus</button>
+
         <!-- profile icon -->
         <i class="fas fa-user" id="profile"></i>
 
