--- a/assets/pages/html/seats.html
+++ b/assets/pages/html/seats.html
@@ -68,6 +68,9 @@
     <!-- Message container for displaying error -->
     <div id="message-container"></div>
 
+    <!-- Add loading animation -->
+    <div id="loader" class="loader"></div>
+
   </main>
 
 
