--- a/assets/pages/html/ticket.html
+++ b/assets/pages/html/ticket.html
@@ -76,7 +76,11 @@
     </div>
 
 
+    
+
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script src="../scripts/ticket.js" type="module"></script>
+
 </body>
 
 </html>
