Remove rating input in admin page.

--- a/assets/pages/html/admin.html
+++ b/assets/pages/html/admin.html
@@ -113,9 +113,9 @@
             </select>
             <span id="chargingPointError"></span>
 
-            <label for="rating">Rating</label>
+            <!-- <label for="rating">Rating</label>
             <input type="number" id="rating" autocomplete="off">
-            <span id="ratingError"></span>
+            <span id="ratingError"></span> -->
 
             <button type="submit" id="submitBtn">Submit</button>
         </form>
