--- a/assets/pages/html/ticket.html
+++ b/assets/pages/html/ticket.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ticket - Smart Bus</title>
+  <title>Smart Bus</title>
   <link rel="stylesheet" href="../styles/ticket.css">
   <link rel="icon" href="../../image/icon_logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
