Change the all path

--- a/assets/pages/admin.html
+++ b/assets/pages/admin.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
 
     <!-- Fav-icon link-->
-    <link rel="icon" href="../../image/icon_logo.png">
+    <link rel="icon" href="../image/icon_logo.png">
 </head>
 
 <body>
