--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -7,7 +7,7 @@
     <title>Smart bus</title>
     <link rel="stylesheet" href="../styles/home.css">
 
-    <link rel="icon" href="../../image/icon_logo.png" type="image/png">
+    <link rel="icon" href="../image/icon_logo.png" type="image/png">
 
     
 
@@ -26,7 +26,7 @@
 <body>
     <header>
         <!-- Bus logo -->
-        <img src="../../image/SMART BUS logo.png" alt="Bus_logo" id="Bus_logo" draggable="false">
+        <img src="../../assets/image/SMART BUS logo.png" alt="Bus_logo" id="Bus_logo" draggable="false">
 
         <!-- My booking button -->
         <h2 id="myBooking">My Booking</h2>
