--- a/assets/pages/seats.html
+++ b/assets/pages/seats.html
@@ -7,7 +7,7 @@
   <title>View seats</title>
   <link rel="stylesheet" href="../styles/seats.css">
 
-  <link rel="icon" href="../../image/icon_logo.png">
+  <link rel="icon" href="../image/icon_logo.png">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +51,7 @@
     <div class="seats">
       <h3 id="lowerDeckHeading">Lower Deck</h3>
       <div id="lowerDeckDiv">
-        <img src="../../image/steering-wheel.png" alt="steering_image" id="steering" draggable="false">
+        <img src="../../assets/image/steering-wheel.png" alt="steering_image" id="steering" draggable="false">
         <div id="driverLine"></div>
         <div id="lowerSeatAlignment"></div> <!-- Updated ID -->
       </div>
