--- a/assets/pages/busList.html
+++ b/assets/pages/busList.html
@@ -7,7 +7,7 @@
     <title>Bus Results</title>
     <link rel="stylesheet" href="../styles/busList.css">
 
-    <link rel="icon" href="../../image/icon_logo.png">
+    <link rel="icon" href="../image/icon_logo.png">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
