--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login - Smart bus</title>
-    <link rel="stylesheet" href="./assets/pages/styles/login.css">
+    <link rel="stylesheet" href="./assets/styles/login.css">
 
     <link rel="icon" href="./assets/image/icon_logo.png">
 
@@ -144,7 +144,7 @@
 
         </form>
     </div>
-    <script type="module" src="./assets/pages/scripts/login.js"></script>
+    <script type="module" src="./assets/scripts/login.js"></script>
 </body>
 
 </html>
