--- a/assets/pages/ticket.html
+++ b/assets/pages/ticket.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smart Bus</title>
   <link rel="stylesheet" href="../styles/ticket.css">
-  <link rel="icon" href="../../image/icon_logo.png">
+  <link rel="icon" href="../image/icon_logo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
 </head>
