Add female seats and add other gender.

--- a/assets/pages/seats.html
+++ b/assets/pages/seats.html
@@ -45,6 +45,11 @@
         <div id="femaleColorBox"></div>
         <div id="female">Female</div>
       </div>
+
+      <div id="othersDiv">
+        <div id="othersColorBox"></div>
+        <div id="others">Others</div>
+      </div>
     </div>
 
     <!-- Seats code -->
